# CS-project

./: .gitignore  README.md  manage.py  pyproject.toml
src/: .gitigore  db.sql  db.sqlite3
src/config/: settings.py  urls.py
src/pages/: apps.py  models.py  urls.py  views.py
src/pages/migrations/: 0001_initial.py  0002_mail.py
src/pages/templates/pages/: error.html  index.html
