[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["TuomasVaara <tuomas.vaara1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
safety = "^2.3.5"
insecure-package = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
